feat: Docs udistrital/contabilidad_cliente#92 udistrital/financiera_documentacion#363
